[project]
name = "skyvoid"
version = "1.0.0"
description = "SkyBlock Data Packs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beet>=0.112.2",
    "mecha>=0.101.0",
    "bolt>=0.49.1",
    "requests>=2.32.3",
    "beet-observer >= 0.7.1",
]

[tool.uv]
dev-dependencies = [
    "black >= 22.6.0, < 23.0.0",
    "isort >= 5.10.1, < 6.0.0",
    "uv >= 0.5.4",
]

[tool.beet]

[tool.pyright]
typeCheckingMode = "strict"

[tool.isort]
profile = "black"
